fixed CORS, fixed sidenav